crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__arrays-3.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_classes(r#\"\n            // main\n            fn main() {\n                let a: []{a: I32, b: I32} = arrayOf({a: 5, b: 6})\n            }\n            \"#)"
---
Main:
ClassData
  this_class:		#2	Main
  super_class:		#32	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			[LStructural$2$aI$bI;
  #06 = Class		#5	[LStructural$2$aI$bI;
  #07 = Utf8			Structural$2$aI$bI
  #08 = Class		#7	Structural$2$aI$bI
  #09 = Integer			1
  #10 = Integer			0
  #11 = Utf8			<init>
  #12 = NameAndType	#11:#4	<init>:()V
  #13 = MethodRef	#8.#12	Structural$2$aI$bI:<init>:()V
  #14 = Integer			5
  #15 = Utf8			a
  #16 = Utf8			I
  #17 = NameAndType	#15:#16	a:I
  #18 = FieldRef	#8.#17	Structural$2$aI$bI.a:I
  #19 = Integer			6
  #20 = Utf8			b
  #21 = NameAndType	#20:#16	b:I
  #22 = FieldRef	#8.#21	Structural$2$aI$bI.b:I
  #23 = Utf8			Code
  #24 = Utf8			StackMapTable
  #25 = Utf8			main
  #26 = Utf8			([Ljava/lang/String;)V
  #27 = Utf8			[Ljava/lang/String;
  #28 = Class		#27	[Ljava/lang/String;
  #29 = NameAndType	#3:#4	main$main:()V
  #30 = MethodRef	#2.#29	Main:main$main:()V
  #31 = Utf8			java/lang/Object
  #32 = Class		#31	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 6, locals = 2
       0: LoadConstant		#9	1
       2: ANewArray		#8	Structural$2$aI$bI
       5: Dup
       6: LoadConstant		#10	0
       8: New			#8	Structural$2$aI$bI
      11: Dup
      12: InvokeSpecial		#13	Structural$2$aI$bI:<init>:()V
      15: Dup
      16: LoadConstant		#14	5
      18: PutField		#18	Structural$2$aI$bI.a:I
      21: Dup
      22: LoadConstant		#19	6
      24: PutField		#22	Structural$2$aI$bI.b:I
      27: AAStore
      28: AStore			0
      30: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#30	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}

-----

Structural$2$aI$bI:
ClassData
  this_class:		#2	Structural$2$aI$bI
  super_class:		#6	java/lang/Object
Constant pool:
  #01 = Utf8			Structural$2$aI$bI
  #02 = Class		#1	Structural$2$aI$bI
  #03 = Utf8			<init>
  #04 = Utf8			()V
  #05 = Utf8			java/lang/Object
  #06 = Class		#5	java/lang/Object
  #07 = NameAndType	#3:#4	<init>:()V
  #08 = MethodRef	#6.#7	java/lang/Object:<init>:()V
  #09 = Utf8			Code
  #10 = Utf8			StackMapTable
  #11 = Utf8			toString
  #12 = Utf8			()Ljava/lang/String;
  #13 = Utf8			java/lang/StringBuilder
  #14 = Class		#13	java/lang/StringBuilder
  #15 = Utf8			java/lang/String
  #16 = Class		#15	java/lang/String
  #17 = MethodRef	#14.#7	java/lang/StringBuilder:<init>:()V
  #18 = Utf8			{ 
  #19 = String		#18	{ 
  #20 = Utf8			append
  #21 = Utf8			(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #22 = NameAndType	#20:#21	append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #23 = MethodRef	#14.#22	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
  #24 = Utf8			a: 
  #25 = String		#24	a: 
  #26 = Utf8			a
  #27 = Utf8			I
  #28 = NameAndType	#26:#27	a:I
  #29 = FieldRef	#2.#28	Structural$2$aI$bI.a:I
  #30 = Utf8			(I)Ljava/lang/StringBuilder;
  #31 = NameAndType	#20:#30	append:(I)Ljava/lang/StringBuilder;
  #32 = MethodRef	#14.#31	java/lang/StringBuilder:append:(I)Ljava/lang/StringBuilder;
  #33 = Utf8			, b: 
  #34 = String		#33	, b: 
  #35 = Utf8			b
  #36 = NameAndType	#35:#27	b:I
  #37 = FieldRef	#2.#36	Structural$2$aI$bI.b:I
  #38 = Utf8			 }
  #39 = String		#38	 }
  #40 = NameAndType	#11:#12	toString:()Ljava/lang/String;
  #41 = MethodRef	#14.#40	java/lang/StringBuilder:toString:()Ljava/lang/String;

{
  PUBLIC a: I

  PUBLIC b: I

  fn <init> {
    descriptor: ()V
    flags: PUBLIC
    Code:
      stack = 1, locals = 2
      0: ALoad			0
      2: InvokeSpecial		#8	java/lang/Object:<init>:()V
      5: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ UninitializedThis ]
          Stack = [  ]
  }

  fn toString {
    descriptor: ()Ljava/lang/String;
    flags: PUBLIC
    Code:
      stack = 2, locals = 2
       0: New			#14	java/lang/StringBuilder
       3: Dup
       4: InvokeSpecial		#17	java/lang/StringBuilder:<init>:()V
       7: LoadConstant		#19	{ 
       9: InvokeVirtual		#23	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      12: LoadConstant		#25	a: 
      14: InvokeVirtual		#23	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      17: ALoad			0
      19: GetField		#29	Structural$2$aI$bI.a:I
      22: InvokeVirtual		#32	java/lang/StringBuilder:append:(I)Ljava/lang/StringBuilder;
      25: LoadConstant		#34	, b: 
      27: InvokeVirtual		#23	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      30: ALoad			0
      32: GetField		#37	Structural$2$aI$bI.b:I
      35: InvokeVirtual		#32	java/lang/StringBuilder:append:(I)Ljava/lang/StringBuilder;
      38: LoadConstant		#39	 }
      40: InvokeVirtual		#23	java/lang/StringBuilder:append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
      43: InvokeVirtual		#41	java/lang/StringBuilder:toString:()Ljava/lang/String;
      46: AReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object 'Structural$2$aI$bI' ]
          Stack = [  ]
  }

}

-----
