crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__arrays.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"let a: []I32 = arrayOfZeros(5)\")"
---
ClassData
  this_class:		#2	Main
  super_class:		#17	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			[I
  #06 = Class		#5	[I
  #07 = Integer			5
  #08 = Utf8			Code
  #09 = Utf8			StackMapTable
  #10 = Utf8			main
  #11 = Utf8			([Ljava/lang/String;)V
  #12 = Utf8			[Ljava/lang/String;
  #13 = Class		#12	[Ljava/lang/String;
  #14 = NameAndType	#3:#4	main$main:()V
  #15 = MethodRef	#2.#14	Main:main$main:()V
  #16 = Utf8			java/lang/Object
  #17 = Class		#16	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 2
      0: LoadConstant		#7	5
      2: NewArray		Int
      4: AStore			0
      6: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#15	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
