crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__conversions.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"let a: I32 = 5\\nlet b: I64 = cast(a)\")"
---
ClassData
  this_class:		#2	Main
  super_class:		#15	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Integer			5
  #06 = Utf8			Code
  #07 = Utf8			StackMapTable
  #08 = Utf8			main
  #09 = Utf8			([Ljava/lang/String;)V
  #10 = Utf8			[Ljava/lang/String;
  #11 = Class		#10	[Ljava/lang/String;
  #12 = NameAndType	#3:#4	main$main:()V
  #13 = MethodRef	#2.#12	Main:main$main:()V
  #14 = Utf8			java/lang/Object
  #15 = Class		#14	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 2, locals = 4
       0: LoadConstant		#5	5
       2: IStore			0
       4: ILoad			0
       6: I2L
       7: LStore		1
       9: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#13	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
