crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__externs-2.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_class(r#\"\n            unsafe extern \"java\" {\n            \t[\"java/io/PrintStream\"]\n            \ttype PrintStream {\n            \t\t[\"println\"]\n            \t\tfn printString(string: String)\n            \t}\n\n            \t[\"java/lang/System\"]\n            \ttype System {\n            \t\t[\"out\"]\n            \t\tstatic let out: PrintStream\n            \t}\n            }\n\n            fn main() {\n            \tSystem.out.printString(\"Hello world!\")\n            }\n            \"#)"
---
ClassData
  this_class:		#2	Main
  super_class:		#30	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			java/io/PrintStream
  #06 = Class		#5	java/io/PrintStream
  #07 = Utf8			java/lang/String
  #08 = Class		#7	java/lang/String
  #09 = Utf8			java/lang/System
  #10 = Class		#9	java/lang/System
  #11 = Utf8			out
  #12 = Utf8			Ljava/io/PrintStream;
  #13 = NameAndType	#11:#12	out:Ljava/io/PrintStream;
  #14 = FieldRef	#10.#13	java/lang/System.out:Ljava/io/PrintStream;
  #15 = Utf8			Hello world!
  #16 = String		#15	Hello world!
  #17 = Utf8			println
  #18 = Utf8			(Ljava/lang/String;)V
  #19 = NameAndType	#17:#18	println:(Ljava/lang/String;)V
  #20 = MethodRef	#6.#19	java/io/PrintStream:println:(Ljava/lang/String;)V
  #21 = Utf8			Code
  #22 = Utf8			StackMapTable
  #23 = Utf8			main
  #24 = Utf8			([Ljava/lang/String;)V
  #25 = Utf8			[Ljava/lang/String;
  #26 = Class		#25	[Ljava/lang/String;
  #27 = NameAndType	#3:#4	main$main:()V
  #28 = MethodRef	#2.#27	Main:main$main:()V
  #29 = Utf8			java/lang/Object
  #30 = Class		#29	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 2, locals = 1
      0: GetStatic		#14	java/lang/System.out:Ljava/io/PrintStream;
      3: LoadConstant		#16	Hello world!
      5: InvokeVirtual		#20	java/io/PrintStream:println:(Ljava/lang/String;)V
      8: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#28	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
