crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__externs.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_class(r#\"\n            unsafe extern \"java\" {\n                [\"java/io/PrintStream\"]\n                type PrintStream {}\n\n                [\"java/lang/System\"]\n                type System {\n                    [\"out\"]\n                    static let out: PrintStream\n                }\n            }\n            fn main() { System.out }\n            \"#)"
---
ClassData
  this_class:		#2	Main
  super_class:		#22	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			java/io/PrintStream
  #06 = Class		#5	java/io/PrintStream
  #07 = Utf8			java/lang/System
  #08 = Class		#7	java/lang/System
  #09 = Utf8			out
  #10 = Utf8			Ljava/io/PrintStream;
  #11 = NameAndType	#9:#10	out:Ljava/io/PrintStream;
  #12 = FieldRef	#8.#11	java/lang/System.out:Ljava/io/PrintStream;
  #13 = Utf8			Code
  #14 = Utf8			StackMapTable
  #15 = Utf8			main
  #16 = Utf8			([Ljava/lang/String;)V
  #17 = Utf8			[Ljava/lang/String;
  #18 = Class		#17	[Ljava/lang/String;
  #19 = NameAndType	#3:#4	main$main:()V
  #20 = MethodRef	#2.#19	Main:main$main:()V
  #21 = Utf8			java/lang/Object
  #22 = Class		#21	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 1
      0: GetStatic		#12	java/lang/System.out:Ljava/io/PrintStream;
      3: Pop
      4: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#20	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
