crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__function.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_class(\"fn main() { bar() }\\nfn bar() { print(1) }\")"
---
ClassData
  this_class:		#2	Main
  super_class:		#33	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			main$bar
  #06 = NameAndType	#5:#4	main$bar:()V
  #07 = MethodRef	#2.#6	Main:main$bar:()V
  #08 = Utf8			Code
  #09 = Utf8			StackMapTable
  #10 = Utf8			java/io/PrintStream
  #11 = Class		#10	java/io/PrintStream
  #12 = Utf8			java/lang/String
  #13 = Class		#12	java/lang/String
  #14 = Utf8			java/lang/System
  #15 = Class		#14	java/lang/System
  #16 = Utf8			out
  #17 = Utf8			Ljava/io/PrintStream;
  #18 = NameAndType	#16:#17	out:Ljava/io/PrintStream;
  #19 = FieldRef	#15.#18	java/lang/System.out:Ljava/io/PrintStream;
  #20 = Utf8			1
  #21 = String		#20	1
  #22 = Utf8			println
  #23 = Utf8			(Ljava/lang/String;)V
  #24 = NameAndType	#22:#23	println:(Ljava/lang/String;)V
  #25 = MethodRef	#11.#24	java/io/PrintStream:println:(Ljava/lang/String;)V
  #26 = Utf8			main
  #27 = Utf8			([Ljava/lang/String;)V
  #28 = Utf8			[Ljava/lang/String;
  #29 = Class		#28	[Ljava/lang/String;
  #30 = NameAndType	#3:#4	main$main:()V
  #31 = MethodRef	#2.#30	Main:main$main:()V
  #32 = Utf8			java/lang/Object
  #33 = Class		#32	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 1
      0: InvokeStatic		#7	Main:main$bar:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main$bar {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 2, locals = 1
      0: GetStatic		#19	java/lang/System.out:Ljava/io/PrintStream;
      3: LoadConstant		#21	1
      5: InvokeVirtual		#25	java/io/PrintStream:println:(Ljava/lang/String;)V
      8: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#31	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
